--- a/package.json
+++ b/package.json
@@ -12,11 +12,17 @@
   "scripts": {
     "build": "tsx scripts/blog.ts",
     "format": "prettier --write .",
-    "deploy": "tsx scripts/deploy.ts",
-    "prepare": "lefthook install"
+    "publish": "tsx scripts/deploy.ts",
+    "prepare": "lefthook install",
+    "gen": "tsx scripts/gen.ts",
+    "gen:staged": "tsx scripts/gen.ts --staged"
   },
   "dependencies": {
+    "@ai-sdk/deepseek": "^1.0.27",
+    "@ai-sdk/openai": "^2.0.64",
+    "ai": "^5.0.89",
     "dayjs": "^1.11.19",
+    "dotenv": "^17.2.3",
     "glob": "^11.0.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.10.0",
