Refactor deployment process by renaming publish script to deploy, updating branch name from "main" to "master", and enhancing file deletion logic to handle directories properly. Implement checks for uncommitted changes and unpushed commits before deployment.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "tsx scripts/blog.ts",
     "format": "prettier --write .",
-    "publish": "tsx scripts/deploy.ts",
+    "deploy": "tsx scripts/deploy.ts",
     "prepare": "lefthook install",
     "gen": "tsx scripts/gen.ts",
     "gen:staged": "tsx scripts/gen.ts --staged"
