feat: 添加 SEO 配置和移动端菜单功能，优化页面元数据和样式

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,16 @@ OPENAI_API_KEY=your_openai_api_key_here
 # AI 生成配置
 # 生成摘要的最大长度（字符数）
 AI_SUMMARY_MAX_LENGTH=150
+
+# SEO配置
+# 百度站长平台验证代码（可选）
+BAIDU_VERIFICATION=your_baidu_verification_code_here
+
+# 站点描述
+SITE_DESCRIPTION=个人技术博客，分享编程经验和技术见解
+
+# 默认关键词
+DEFAULT_KEYWORDS=技术,博客,编程,前端,后端,JavaScript,TypeScript
+
+# Twitter/X 用户名（可选，包含@符号）
+TWITTER_CREATOR=@your_twitter_handle_here
